[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "VonPylib_voicevon"
version = "0.1.53"
authors = [
  { name="vovicevon", email="voicevon@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/voicevon/VonPylib"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"